# eu-unemployment-prediction

./: .gitignore  README.md  setup.cfg
data/: dollar_euro_exchange_rate.csv  euro_stoxx_50.csv  gdp.csv  gdp_at_market_price.csv  government_debt.csv  government_deficit_surplus.csv  inflation_rate.csv  key_interest_rate.csv  monetary_aggregate_m3.csv  population.csv  unemployment_seasonadjusted.csv
datasets/: labour_productivity.csv  unemployment_rate.csv  unit_labour_costs.csv
model/lstm/: UEK_lstm.pt  lstm_U.pt  lstm_UEK_32.pt  lstm_UKDGVILMCE_32.pt  lstm_UKDGVILMCE_64.pt  lstm_U_32.pt  unemployment_lstm.pt  unemployment_seasonadjusted_euro_stoxx_50_key_interest_rate_lstm.pt  unemployment_seasonadjusted_key_interest_rate_lstm.pt  unemployment_seasonadjusted_lstm.pt
scripts/: base_lstm.py  lstm_all.py  lstm_u.py  lstm_uek.py
src/eu_unemployment_prediction/: __init__.py  data_loading.py  date_conversion_helper.py  input_data_type.py
src/eu_unemployment_prediction/input_data_type/: __init__.py  _data_periodicity.py  _input_data_type.py  _input_data_type_definition.py  _normalization.py
src/eu_unemployment_prediction/lstm/: __init__.py  _data_loader.py  unemployment_lstm.py  unemployment_lstm_trainer.py
src/eu_unemployment_prediction/plotting/: plot_dataset.py
src/eu_unemployment_prediction/simple_gp/: __init__.py  simple_gp_unemployment_model.py  unemployment_gp_trainer.py
test/: conftest.py
test/eu_unemployment_prediction/: test_input_data_type.py  test_input_data_type_data_loading.py
test/eu_unemployment_prediction/data_loading/: test_data_loading.py  test_data_periodicity.py  test_date_conversion_helper.py
test/eu_unemployment_prediction/input_data_type/: test_input_data_type.py  test_input_data_type_data_loading.py  test_input_data_type_normalization.py
test/eu_unemployment_prediction/lstm/: test_data_loader.py  test_unemployment_lstm.py  test_unemployment_lstm_trainer.py
