[metadata]
name = eu_unemployment_prediction
author = Christoph Lienhard, Katharina Ott
platforms = linux
keywords = ML, ECB

[options]
packages=find:
install_requires =
  pandas~=2.1
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools

[options.packages.find]
where=src

[options.extras_require]
dev =
  black
  flake8
  mypy
  pytest
  isort
  pandas-stubs~=2.0

[flake8]
# Style-related configurations
max-line-length = 120
# Ignore whitespace before ':' (conflicts with black)
extend-ignore = E203

[mypy]
# Type-checking configurations
mypy_path = src
files = src/**/*.py
python_version = 3.8
strict = True
warn_unused_ignores = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
disallow_incomplete_defs = True
warn_incomplete_stub = True
show_error_codes = True

[isort]
profile = black
